--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "Sorting algorithm",
 	"main": "index.js",
 	"scripts": {
-		"test": "nodeunit",
+		"test": "mocha",
 		"start": "node index.js",
 		"cli": "node index.js --cli"
 	},
@@ -18,6 +18,7 @@
 	"author": "Romain Lebesle <oss@thoughtsunificator.me> (https://thoughtsunificator.me)",
 	"license": "MIT",
 	"devDependencies": {
-		"eslint": "^7.13.0"
+		"eslint": "^7.13.0",
+		"mocha": "^9.1.1"
 	}
 }
